fixing about-shop spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -121,17 +121,14 @@ a:hover, a:visited, a:active {
 
 .about-shop {
   background-color: #fff;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  width: 100vw;
 }
 
-.about-shop > div {
+.about-shop-container {
   background-color: #fff;
   display: flex;
   flex-direction: row;
-  align-items: flex-start;
-  justify-content: center;
+  justify-content:space-between;
 }
 
 .about-shop-image > img {
